# dictory

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  codecoverage.yml  quality.yml  release.yml
dict_utils/: core.py
tests/: test_core.py
